[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/menus/dialogue_panel.gd" type="Script" id=1]
[ext_resource path="res://scenes/panel_5.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/text_with_shadow.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/icon_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/berenika_14.tres" type="DynamicFont" id=5]

[node name="dialogue_panel" type="Popup"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -176.0
margin_right = 176.0
margin_bottom = 176.0
popup_exclusive = true
script = ExtResource( 1 )

[node name="panel" parent="." instance=ExtResource( 2 )]
script = null

[node name="title_label" parent="panel" instance=ExtResource( 3 )]
anchor_right = 1.0
margin_top = 11.0
margin_right = 0.0
margin_bottom = 35.0
bbcode_text = "[center]Unit Name[/center]"
text = "Unit Name"

[node name="icon_button" parent="panel" instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -27.0
margin_top = 48.0
margin_right = 27.0
margin_bottom = 46.0

[node name="text_label" parent="panel" instance=ExtResource( 3 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 112.0
margin_right = -14.0
margin_bottom = -48.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode_text = "Achievement Description"
text = "Achievement Description"

